--- a/fig.yml
+++ b/fig.yml
@@ -8,6 +8,7 @@ web:
     - '3000:3000'
   links:
     - redis
+    - db
   volumes:
     - .:/grounds
   environment:
@@ -16,15 +17,20 @@ web:
     - SECRET_KEY_BASE
     - NEWRELIC_LICENSE_KEY
     - NEWRELIC_APP_NAME
+    - DB_USERNAME=docker
+    - DB_PASSWORD=docker
 
 test:
   image: groundsio_image
   command: rake test
   links:
+    - db
     - runner
   environment:
     - TEST_OPTS
     - DOCKER_URL
+    - DB_USERNAME=docker
+    - DB_PASSWORD=docker
 
 redis:
   image: dockerfile/redis
@@ -32,6 +38,11 @@ redis:
     - '6379'
   volumes:
     - /redis:/data
+
+db:
+  image: orchardup/postgresql
+  expose:
+    - '5432'
 
 runner:
   image: grounds/grounds-exec
