add all themes supported by ace

--- a/config/editor.yml
+++ b/config/editor.yml
@@ -1,8 +1,36 @@
 themes:
   tomorrow_night: 'Tomorrow Night'
-  textmate: 'Textmate'
-  monokai: 'Monokai'
+  ambiance: 'Ambiance'
+  chaos: 'Chaos'
+  chrome: 'Chrome'
+  clouds: 'Clouds'
+  clouds_midnight: 'Clouds Midnight'
+  cobalt: 'Cobalt'
+  crimson_editor: 'Crimson Editor'
+  dawn: 'Dawn'
+  dreamweaver: 'Dreamweaver'
+  eclipse: 'Eclipse'
   github: 'GitHub'
+  idle_fingers: 'idle Fingers'
+  katzenmilch: 'KatzenMilch'
+  kr_theme: 'krTheme'
+  kuroir: 'Kuroir'
+  merbivore: 'Merbivore'
+  merbivore_soft: 'Merbivore Soft'
+  mono_industrial: 'Mono Industrial'
+  monokai: 'Monokai'
+  pastel_on_dark: 'Pastel on dark'
+  solarized_dark: 'Solarized Dark'
+  solarized_light: 'Solarized Light'
+  terminal: 'Terminal'
+  textmate: 'TextMate'
+  tomorrow: 'Tomorrow'
+  tomorrow_night_blue: 'Tomorrow Night Blue'
+  tomorrow_night_bright: 'Tomorrow Night Bright'
+  tomorrow_night_eighties: 'Tomorrow Night 80s'
+  twilight: 'Twilight'
+  vibrant_ink: 'Vibrant Ink'
+  xcode: 'XCode'
 
 indents:
   '2': '2 spaces'
@@ -12,18 +40,18 @@ indents:
 
 languages:
   ruby: 'Ruby'
-  golang: 'Go'
-  python2: 'Python 2'
-  python3: 'Python 3'
   c: 'C'
   cpp: 'C++'
   csharp: 'C#'
-  php: 'PHP'
+  golang: 'Go'
   java: 'Java'
+  php: 'PHP'
+  python2: 'Python 2'
+  python3: 'Python 3'
   node: 'Node.js'
   rust: 'Rust'
 
 keyboards:
   ace: 'Ace'
-  'vim': 'Vim'
   emacs: 'Emacs'
+  'vim': 'Vim'
