add a way to override the runner
Circle CI does not provide the docker url. Beside that, it would be
long to also pull code runner image for every build.

Therefore we will run this test suite on the CI with against the
staging code runner.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ web:
     - RAILS_ENV
     - TEST_OPTS
     - DOCKER_URL
+    - RUNNER_URL
     - SECRET_KEY_BASE
     - NEWRELIC_LICENSE_KEY
     - NEWRELIC_APP_NAME
