override databse setup

--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,11 @@ machine:
   services:
     - docker
 
+## Remove automatic database setup
+database:
+  override:
+    - echo "no database setup"
+
 dependencies:
   override:
     - sudo pip install -U docker-compose
