--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ dependencies:
 test:
   override:
     - docker-compose build web
-    - docker-compose run --no-deps web rake test
+    - docker-compose run --no-deps web bundle exec rake test
 
 deployment:
   hub:
