--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ web:
     - RAILS_ENV
     - TEST_OPTS
     - DOCKER_URL
+    - REDIS_URL
     - RUNNER_URL
     - SECRET_KEY_BASE
     - NEWRELIC_LICENSE_KEY
