ignore redis config in tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ web:
     - TEST_OPTS
     - DOCKER_URL
     - REDIS_URL
+    - REDIS_PASSWORD
     - RUNNER_URL
     - SECRET_KEY_BASE
     - NEWRELIC_LICENSE_KEY
