--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,6 @@
 machine:
+  pre:
+    - sudo pip install -U docker-compose
   services:
     - docker
 
@@ -9,7 +11,6 @@ database:
 
 dependencies:
   override:
-    - sudo pip install -U docker-compose
     - docker-compose --version
 
 test:
